--- a/Final Try/dashboard.css
+++ b/Final Try/dashboard.css
@@ -11,30 +11,89 @@ body {
     margin: 0;
     padding: 0;
     position: fixed;
+    /* left: 0%;
+    transform: translate(-50%); */
+    contain: content;
 }
 
-.sidebar * {
+
+/* .sidebar:hover {
+    transform: translate(0%);
+    transition: 0.3s;
+} */
+
+.sidebar p {
     display: block;
     padding: 3%;
-    color: white;
+    color: rgb(129, 129, 129);
     text-decoration: none;
-    text-indent: 1vw;
+    /* text-indent: 1vw; */
+    margin-left: 1vh;
+    cursor: pointer;
 }
 
-.sidebar *.active {
-    background-color: rgb(173, 239, 209);
-    color: black;
-    padding: 16%;
-}
-
-.sidebar *:hover:not(.active) {
-    background-color: #555;
+.sidebar p.active {
+    /* background-color: rgb(173, 239, 209); */
+    background-color: black;
     color: white;
-    padding: 10%;
+    padding: 16%;
+    animation: colorswitch 1s;
+}
+
+.sidebar i {
+    background-color: rgb(48, 47, 63);
+    display: block;
+    padding: 5%;
+    width: fit-content;
+    color: rgb(129, 129, 129);
+    margin-left: 95%;
+    transform: translate(-100%);
+    border: 1px solid white;
+    border-radius: 20%;
+}
+
+.sidebar i:hover {
+    border: 1px solid rgb(129, 129, 129);
+    color: white;
+}
+
+@keyframes colorswitch {
+    from {
+        background-color: rgb(48, 47, 63);
+    }
+    to {
+        background-color: black;
+    }
+}
+
+@keyframes indent {
+    from {
+        text-indent: 0;
+    }
+    to {
+        text-indent: 2vh;
+    }
+}
+
+.sidebar p:hover:not(.active) {
+    /* background-color: #555; */
+    color: white;
+    /* padding: 10%; */
+    animation: indent 1s;
+}
+
+.hamburgerIcon {
+    background-color: rgb(48, 47, 63);
+    border: none;
+    color: white;
+    padding: 12px 16px;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .content {
     margin-left: 13%;
+    margin-right: 15%;
     border: 2px solid red;
     width: 72%;
     height: 100%;
@@ -53,6 +112,7 @@ body {
     width: 100%;
     padding-top: 5vh;
     padding: 2vh;
+    animation: fadeEffect 1s;
 }
 
 .catThree {
@@ -75,19 +135,26 @@ body {
     left: 85%;
     transform: translate(0%, 0%);
     background-color: rgb(48, 47, 63);
+    z-index: 1;
 }
 
 .userImg {
     /* border: 4px solid white; */
     width: 80%;
-    min-height: 20%;
+    /* min-height: 20%; */
     max-height: fit-content;
     margin: auto;
     margin-top: 10%;
-    background-image: url("src/userimage.png");
+    /* background-image: url("src/userimage.png");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center;
+    background-position: center; */
+}
+
+.loggedinuserImg {
+    width: 100%;
+    border-radius: 50%;
+    border: 3px solid rgb(98, 246, 8);
 }
 
 .rightDiv p {
@@ -200,4 +267,13 @@ body {
 
 .appointmentsTable p {
     display: inline;
+}
+
+@keyframes fadeEffect {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
