--- a/Final Try/dashboard.css
+++ b/Final Try/dashboard.css
@@ -174,7 +174,7 @@ body {
 }
 
 .tileHolder {
-    /* border: 2px solid purple; */
+    border: 2px solid purple;
     display: flex;
     justify-content: center;
     height: 20%;
@@ -194,6 +194,46 @@ body {
     position: relative;
     border-radius: 5vh;
     box-shadow: 0.5vh 1vh 10px rgb(48, 47, 63);
+}
+
+.tileHolder2 {
+    border: 2px solid purple;
+    display: flex;
+    justify-content: left;
+    height: 20%;
+    /* contain: content; */
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+}
+
+.staffList {
+    /* border: 1px solid blue; */
+    border-radius: 5vh 0 0 5vh;
+    height: 75%;
+    display: block;
+    margin-block-start: 2%;
+    /* contain: content; */
+    overflow: scroll;
+    overflow-x: hidden;
+    background-color: rgb(213, 214, 219);
+}
+
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 2vh;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(38, 97, 156);
+    border-radius: 2vh;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(38, 97, 156);
 }
 
 .tileinner {
@@ -230,7 +270,8 @@ body {
     height: 60%;
     margin: auto;
     margin-top: 10%;
-    contain: content;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 .appointmentsTable {
@@ -276,4 +317,47 @@ body {
     to {
         opacity: 1;
     }
+}
+
+.addStaffWindow {
+    height: 100%;
+    width: 0%;
+    /* border: 2px solid red; */
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    /* border-radius: 5vh; */
+    /* background-color: rgba(255, 255, 255, 0.9); */
+    transition: 0.5s;
+}
+
+.addStaffInner {}
+
+.addStaffCloseBtn {}
+
+.closebtn {
+    /* background-color: rgb(48, 47, 63);
+    display: block;
+    padding: 5%;
+    width: fit-content;
+    color: rgb(129, 129, 129);
+    margin-left: 95%;
+    transform: translate(-100%);
+    border: 1px solid white;
+    border-radius: 20%; */
+    color: rgb(85, 85, 85);
+    position: fixed;
+    right: 1%;
+    top: 1.5%;
+    font-size: 4vh;
+    /* border: 1px solid white;
+    padding: 1%;
+    border-radius: 4vh; */
+}
+
+.closebtn:hover {
+    color: black;
 }
