--- a/Final Try/dashboard.css
+++ b/Final Try/dashboard.css
@@ -94,7 +94,7 @@ body {
 .content {
     margin-left: 13%;
     margin-right: 15%;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 72%;
     height: 100%;
     /* padding-top: 10%; */
@@ -174,7 +174,7 @@ body {
 }
 
 .tileHolder {
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     display: flex;
     justify-content: center;
     height: 20%;
@@ -197,7 +197,7 @@ body {
 }
 
 .tileHolder2 {
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     display: flex;
     justify-content: left;
     height: 20%;
@@ -228,12 +228,12 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: rgb(38, 97, 156);
+    background-color: #302f3f;
     border-radius: 2vh;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: rgb(38, 97, 156);
+    background-color: #4a4b62;
 }
 
 .tileinner {
@@ -329,12 +329,14 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    /* border-radius: 5vh; */
+    border-radius: 2vh;
     /* background-color: rgba(255, 255, 255, 0.9); */
     transition: 0.5s;
 }
 
-.addStaffInner {}
+.addStaffInner {
+    animation: fadeEffect 2s;
+}
 
 .addStaffCloseBtn {}
 
@@ -360,4 +362,146 @@ body {
 
 .closebtn:hover {
     color: black;
+}
+
+.TileCenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.TileText {
+    /* padding: 5%; */
+    display: block;
+    font-size: 2vh;
+}
+
+.addStaffFormSub {
+    transition: 0.5s;
+}
+
+.addStaffTable {
+    width: 90%;
+    height: 100%;
+}
+
+.innerAddStaff {
+    /* background-color: bisque; */
+    height: 100%;
+    width: 100%;
+    background-color: #b5bfd6;
+    border-radius: 2vh;
+}
+
+.tileHolder3 {
+    /* border: 2px solid purple; */
+    display: flex;
+    justify-content: left;
+    height: 5%;
+    /* contain: content; */
+    /* padding-top: 2vh;
+    padding-bottom: 2vh; */
+}
+
+.tablinks {
+    /* border: 1px solid black; */
+    width: 20%;
+    height: 100%;
+    margin-top: 1vh;
+    /* margin-left: 1%; */
+    margin-inline: none;
+    display: inline-block;
+    background-color: white;
+    position: relative;
+    border-radius: 5vh;
+    box-shadow: 0.5vh 1vh 10px rgb(48, 47, 63);
+}
+
+.tablinks.active {
+    background-color: black;
+    color: white;
+}
+
+.tabContent {
+    /* border: 1px solid red; */
+    width: 95%;
+    height: 85%;
+    margin: auto;
+    margin-top: 5vh;
+}
+
+.addStaffProfileDetailsTable {
+    height: 100%;
+    width: 95%;
+    margin: auto;
+    background-color: #eef1f7;
+    border-radius: 5vh;
+}
+
+.addStaffProfileDetailsTable td {
+    font-weight: bold;
+    width: 25%;
+    padding-left: 1vh;
+    padding-right: 1vh;
+}
+
+.addStaffProfileDetailsTable p {
+    display: inline-block;
+}
+
+.addStaffProfileDetailsTable input {
+    border-radius: 5vh;
+    border: none;
+    background-color: white;
+    outline: none;
+    color: black;
+    text-indent: 2vh;
+    padding: 2vh;
+    width: 100%;
+}
+
+.addStaffProfileDetailsTable input::placeholder {
+    color: rgb(171, 174, 183);
+}
+
+.addStaffProfileDetailsTable textarea {
+    border-radius: 5vh;
+    border: none;
+    background-color: white;
+    outline: none;
+    color: black;
+    text-indent: 2vh;
+    padding: 2vh;
+    width: 100%;
+}
+
+.addStaffProfileDetailsTable textarea::placeholder {
+    color: rgb(129, 129, 129);
+}
+
+.addStaffProfileDetailsTable select {
+    border-radius: 5vh;
+    border: none;
+    background-color: while;
+    outline: none;
+    color: black;
+    text-indent: 2vh;
+    padding: 2vh;
+    width: 100%;
+}
+
+.addStaffProfileDetailsTable p {
+    text-indent: 2vh;
+}
+
+.addStaffProfileDetailsTable input[type=submit] {
+    width: 50%;
+    margin-left: 50%;
+    transform: translate(-50%);
+    background-color: #302f3f;
+    color: white;
+}
+
+.addStaffProfileDetailsTable input[type=submit]:hover {
+    background-color: #4a4b62;
 }
