--- a/Final Try/dashboard.css
+++ b/Final Try/dashboard.css
@@ -97,6 +97,7 @@ body {
     /* border: 2px solid red; */
     width: 72%;
     height: 100%;
+    background-image: linear-gradient(to left bottom, #eef1f7, #dfe4ef, #d1d8e6, #c3cbde, #b5bfd6);
     /* padding-top: 10%; */
 }
 
@@ -107,7 +108,7 @@ body {
 }
 
 .catTwo {
-    background-color: rgb(214, 218, 229);
+    /* background-color: rgb(214, 218, 229); */
     height: 100%;
     width: 100%;
     padding-top: 5vh;
