--- a/Final Try/dashboard.css
+++ b/Final Try/dashboard.css
@@ -221,7 +221,10 @@ body {
     /* contain: content; */
     overflow: scroll;
     overflow-x: hidden;
-    background-color: rgb(213, 214, 219);
+    /* background-color: rgb(213, 214, 219); */
+    background-color: rgb(0, 0, 0, 0.5);
+    /* color: white; */
+    font-weight: bold;
 }
 
 ::-webkit-scrollbar {
@@ -285,18 +288,47 @@ body {
     width: 95%;
     /* height: 100%; */
     /* background-color: #555; */
+    margin-top: 1vh;
+}
+
+.appointmentsTable2 {
+    margin: auto;
+    width: 95%;
+    color: white;
+    /* height: 100%; */
+    /* background-color: #555; */
+    /* padding: 1vh; */
+    margin-top: 1vh;
+}
+
+.appointmentsTable2 th {
+    padding: 1vh;
+    width: 20%;
 }
 
 .appointmentsTable td {
     text-indent: 2%;
     width: 20%;
-    height: 10vh;
+    /* height: 10vh; */
+    padding: 1vh;
     background-color: rgb(171, 174, 183);
 }
 
 .appointmentsTable th {
     height: 5vh;
     width: 20%;
+}
+
+.appointmentsTable input {
+    padding: 1vh;
+    display: inline-block;
+    /* margin-left: 50%;
+    transform: translate(-50%); */
+    border-radius: 5vh;
+}
+
+.btnBox {
+    width: 40%;
 }
 
 .appointmentTile {
